--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <ul id="lista-compras">
                 <li>
                     <label>
-                        <input type="checkbox" value="Arroz"> 
-                        <span>Arroz</span>
+                        <input type="checkbox" value="Heineken 350ml"> 
+                        <span>Heineken 350ml</span>
                     </label>
                 </li>
                 <li>
