--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <p>Escolha o grupo:</p>
         </div>
         <div class="grid-categorias">
+            <button onclick="abrirLista('Essencias')">🌬️ Essências</button>
             <button onclick="abrirLista('Tabacaria')">🚬 Tabacaria</button>
             <button onclick="abrirLista('Vinhos')">🍷 Vinhos</button>
             <button onclick="abrirLista('Cervejas')">🍺 Cervejas</button>
